--- a/rizuge/html/contact.html
+++ b/rizuge/html/contact.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="../css/aui.css">
 </head>
 <body>
-<header class="aui-bar aui-bar-nav aui-bar-light">
-    <a class="aui-pull-left aui-btn">
+<header class="aui-bar aui-bar-nav aui-bar-light" style="position: fixed">
+    <a class="aui-pull-left aui-btn" onclick="api.closeWin();">
         <span class="aui-iconfont aui-icon-left"></span>
     </a>
     <div class="aui-title">房东昵称</div>
@@ -22,152 +22,26 @@
         <span class="aui-iconfont aui-icon-my"></span>
     </a>
 </header>
-<section class="aui-chat">
-    <div class="aui-chat-header">2016年7月13日</div>
-    <div class="aui-chat-item aui-chat-left">
-        <div class="aui-chat-media">
-            <img src="../../image/demo2.png" />
-        </div>
-        <div class="aui-chat-inner">
-            <div class="aui-chat-name">AUI <span class="aui-label aui-label-warning">2.0</span></div>
-            <div class="aui-chat-content">
-                <div class="aui-chat-arrow"></div>
-                Hello AUI 2.0!
-            </div>
-            <div class="aui-chat-status aui-chat-status-refresh">
-                <i class="aui-iconfont aui-icon-correct aui-text-success"></i>
-            </div>
-        </div>
-    </div>
-    <div class="aui-chat-item aui-chat-right">
-        <div class="aui-chat-media">
-            <img src="../../image/liulangnan.png" />
-        </div>
-        <div class="aui-chat-inner">
-            <div class="aui-chat-name">流浪男</div>
-            <div class="aui-chat-content">
-                <div class="aui-chat-arrow"></div>
-                你好！
-            </div>
-            <div class="aui-chat-status">
-                <i class="aui-iconfont aui-icon-info aui-text-danger"></i>
-            </div>
-        </div>
-    </div>
-    <div class="aui-chat-item aui-chat-left">
-        <div class="aui-chat-media">
-            <img src="../../image/demo2.png" />
-        </div>
-        <div class="aui-chat-inner">
-            <div class="aui-chat-name">AUI <span class="aui-label aui-label-warning">2.0</span></div>
-            <div class="aui-chat-content">
-                <div class="aui-chat-arrow"></div>
-                <img src="../../image/l1.png" />
-            </div>
-        </div>
-    </div>
-    <div class="aui-chat-item aui-chat-right">
-        <div class="aui-chat-media">
-            <img src="../../image/liulangnan.png" />
-        </div>
-        <div class="aui-chat-inner">
-            <div class="aui-chat-name">流浪男</div>
-            <div class="aui-chat-content">
-                <div class="aui-chat-arrow"></div>
-                以前拍摄的牛背山星空
-            </div>
-        </div>
-    </div>
-    <div class="aui-chat-item aui-chat-left">
-        <div class="aui-chat-media">
-            <img src="../../image/demo2.png" />
-        </div>
-        <div class="aui-chat-inner">
-            <div class="aui-chat-name">AUI <span class="aui-label aui-label-warning">2.0</span></div>
-            <div class="aui-chat-content">
-                <div class="aui-chat-arrow"></div>
-                <img src="../../image/l2.png" />
-            </div>
-        </div>
-    </div>
 
-</section>
 </body>
 </html>
 <script type="text/javascript" src="../script/api.js"></script>
 <script>
+    var param;
     apiready = function () {
         $api.fixStatusBar($api.dom('header'));
-        var UIChatBox = api.require('UIChatBox');
-        UIChatBox.open({
-            placeholder: '',
-            maxRows: 4,
-            emotionPath: 'widget://image/emotion',
-            texts: {
-                recordBtn: {
-                    normalTitle: '按住说话',
-                    activeTitle: '松开结束'
-                },
-                sendBtn: {
-                    title: 'send'
-                }
+        param = api.pageParam;
+        api.openFrame({
+            name: 'chat',
+            url: './chat.html',
+            rect: {
+                x: 0,
+                y: 70,
+                w: 'auto',
+                h: 'auto'
             },
-            styles: {
-                inputBar: {
-                    borderColor: '#d9d9d9',
-                    bgColor: '#f2f2f2'
-                },
-                inputBox: {
-                    borderColor: '#B3B3B3',
-                    bgColor: '#FFFFFF'
-                },
-                emotionBtn: {
-                    normalImg: 'widget://image/face1.png'
-                },
-                extrasBtn: {
-                    normalImg: 'widget://image/add1.png'
-                },
-                keyboardBtn: {
-                    normalImg: 'widget://image/key1.png'
-                },
-                speechBtn: {
-                    normalImg: 'widget://image/key1.png'
-                },
-                recordBtn: {
-                    normalBg: '#c4c4c4',
-                    activeBg: '#999999',
-                    color: '#000',
-                    size: 14
-                },
-                indicator: {
-                    target: 'both',
-                    color: '#c4c4c4',
-                    activeColor: '#9e9e9e'
-                },
-                sendBtn: {
-                    titleColor: '#4cc518',
-                    bg: '#999999',
-                    activeBg: '#46a91e',
-                    titleSize: 14
-                }
-            },
-            extras: {
-                titleSize: 10,
-                titleColor: '#a3a3a3',
-                btns: [{
-                    title: '图片',
-                    normalImg: 'widget://image/album1.png',
-                    activeImg: 'widget://image/album2.png'
-                }, {
-                    title: '拍照',
-                    normalImg: 'widget://image/cam1.png',
-                    activeImg: 'widget://image/cam2.png'
-                }]
-            }
-        }, function(ret, err) {
-            if (ret) {
-            } else {
-            }
+            pageParam: param,
+            bounces: true
         });
     }
 </script>
