--- a/rizuge/html/contactlist.html
+++ b/rizuge/html/contactlist.html
@@ -11,7 +11,7 @@
     <style>
         body{
             padding: 0px;
-            background-color: #eee;
+            background-color: #fff;
         }
     </style>
 </head>
@@ -22,77 +22,145 @@
 <script>
     apiready = function () {
         var UIListView = api.require('UIListView');
-        UIListView.open({
-            rect: {
-                x: 0,
-                y: 0,
-                w: api.winWidth,
-                h: api.frameHeight
-            },
-            data: [{
-                uid: '1001',
-                imgPath: 'widget://image/demo5.png',
-                title: '房东昵称',
-                subTitle: '欢迎来租房',
-                icon: ''
-            },{
-                uid: '1003',
-                imgPath: 'widget://image/demo5.png',
-                title: '房东昵称',
-                subTitle: '子标题，说明文字',
-                icon: ''
-            },{
-                uid: '1004',
-                imgPath: 'widget://image/demo5.png',
-                title: '房东昵称',
-                subTitle: '子标题，说明文字',
-                icon: ''
-            },{
-                uid: '1005',
-                imgPath: 'widget://image/demo5.png',
-                title: '房东昵称',
-                subTitle: '子标题，说明文字',
-                icon: ''
-            }],
-            rightBtns:[{
-                bgColor: '#FF3300', //（可选项）字符串类型；按钮背景色，支持 rgb、rgba、#；默认：'#388e8e'
-                activeBgColor: '',  //（可选项）字符串类型；按钮按下时的背景色，支持 rgb、rgba、#
-                width: 90,          //（可选项）数字类型；按钮的宽度；默认：w / 4
-                title: '删除',          //（可选项）字符串类型；按钮标题，水平、垂直居中
-                titleSize: 20,      //（可选项）数字类型；按钮标题文字大小；默认：12
-                titleColor: '#fff', //（可选项）字符串类型；按钮标题文字颜色，支持 rgb、rgba、#；默认：'#ffffff'
-                icon: '',           //（可选项）字符串类型；按钮标题前的图标路径（本地路径，支持fs://、widget://），水平、垂直居中，图标为正方形
-                iconWidth: 20       //（可选项）数字类型；按钮标题前的图标宽度，图标为正方形；默认：20
-            }],
-            styles: {
-                borderColor: '#eee',
-                item: {
-                    bgColor: '#fff',
-                    activeBgColor: '#eee',
-                    height: 70.0,
-                    imgWidth: 65,
-                    imgHeight: 65,
-                    imgCorner: 4,
-                    placeholderImg: '',
-                    titleSize: 20.0,
-                    titleColor: '#000',
-                    subTitleSize: 16.0,
-                    subTitleColor: '#999999',
-                    remarkColor: '#000',
-                    remarkSize: 16,
-                    remarkIconWidth: 30
-                }
-            },
-            fixedOn: api.frameName
+        api.addEventListener({
+            name: 'startgetConversationList'
+        },function(ret,err){
+          api.sendEvent({
+              name: 'getConversationList',
+              extra: {}
+          });
+        });
+        api.addEventListener({
+            name: 'sortContactList'
+        },function(ret,err){
+          tid = ret.value.message.targetId;
+          lastmsg = ret.value.message.content.text;
+          UIListView.getIndex({
+            key: 'uid',
+            value: tid
         }, function(ret, err) {
-            if (ret.eventType == 'clickContent') {
-                api.openWin({
-                    name: 'cantact',
-                    url: './contact.html',
-                    pageParam: {name: 'pageparamname'}
+            if (ret) {
+                nowindex = ret.index;
+                data = ret.data;
+                data.subTitle = lastmsg;
+                //更新最后一条聊天记录
+                UIListView.updateItem({
+                    index: nowindex,
+                    data: data
+                }, function(ret, err) {
+                    if (ret) {
+                    } else {
+                    }
                 });
             } else {
+                //添加这一项
             }
         });
+        })
+        api.addEventListener({
+            name: 'getConversationList2'
+        },function(ret,err){
+            if(ret && ret.value.status == 'success'){
+                result = ret.value.result;
+                console.log(JSON.stringify(result))
+                var targetArray = [];
+                var data = [];
+                for(var i = 0 ; i < result.length ; i++){
+                    targetArray.push(result[i].targetId)
+                }
+                api.ajax({
+                    url: 'http://rzg.9170.gs/api/user/getUserInfo',
+                    method: 'post',
+                    timeout: 30,
+                    dataType: 'json',
+                    returnAll: false,
+                    data: {
+                        values: {targetId: JSON.stringify(targetArray)}
+                    }
+                }, function (ret, err) {
+                    for(var i = 0 ; i < result.length ; i++){
+                        if(ret[result[i].targetId].nickname == null){
+                            var username = "用户"+ret[result[i].targetId].uid
+                        }else if(ret[result[i].targetId].nickname != null){
+                            var username = ret[result[i].targetId].nickname
+                        }else{
+                            var username = "未知用户";
+                        }
+                        var info = {
+                            uid: result[i].targetId.toString(),
+                            imgPath: 'widget://image/demo5.png',
+                            title:username,
+                            subTitle: result[i].latestMessage.text,
+                            icon: ''
+                        };
+                        data.push(info);
+                    }
+                    UIListView.open({
+                        rect: {
+                            x: 0,
+                            y: 0,
+                            w: api.winWidth,
+                            h: api.frameHeight
+                        },
+                        data: data,
+                        rightBtns:[{
+                            bgColor: '#FF3300', //（可选项）字符串类型；按钮背景色，支持 rgb、rgba、#；默认：'#388e8e'
+                            activeBgColor: '',  //（可选项）字符串类型；按钮按下时的背景色，支持 rgb、rgba、#
+                            width: 120,          //（可选项）数字类型；按钮的宽度；默认：w / 4
+                            title: '删除',          //（可选项）字符串类型；按钮标题，水平、垂直居中
+                            titleSize: 20,      //（可选项）数字类型；按钮标题文字大小；默认：12
+                            titleColor: '#fff', //（可选项）字符串类型；按钮标题文字颜色，支持 rgb、rgba、#；默认：'#ffffff'
+                            icon: '',           //（可选项）字符串类型；按钮标题前的图标路径（本地路径，支持fs://、widget://），水平、垂直居中，图标为正方形
+                            iconWidth: 20       //（可选项）数字类型；按钮标题前的图标宽度，图标为正方形；默认：20
+                        }],
+                        styles: {
+                            borderColor: '#eee',
+                            item: {
+                                bgColor: '#fff',
+                                activeBgColor: '#eee',
+                                height: 70.0,
+                                imgWidth: 50,
+                                imgHeight: 50,
+                                imgCorner: 4,
+                                placeholderImg: '',
+                                titleSize: 20.0,
+                                titleColor: '#000',
+                                subTitleSize: 16.0,
+                                subTitleColor: '#999999',
+                                remarkColor: '#000',
+                                remarkSize: 16,
+                                remarkIconWidth: 30
+                            }
+                        },
+                        fixedOn: api.frameName
+                    }, function(ret, err) {
+                        if (ret.eventType == 'clickContent') {
+                            var index = ret.index;
+                            UIListView.getDataByIndex({
+                                index: index
+                            }, function(ret, err) {
+                                if (ret) {
+                                    var targetId = ret.data.uid;
+                                    api.openWin({
+                                        name: 'cantact',
+                                        url: './contact.html',
+                                        pageParam: {uid: targetId},
+                                        bounces: false
+                                    });
+                                } else {
+                                    alert(JSON.stringify(err));
+                                }
+                            });
+                        } else {
+
+                        }
+                    });
+                });
+
+            }
+
+        });
+
+
     };
 </script>
